implement interest calculation logic & add new migration & refactor other things
